🐛 Fix hover-on effect not visible when having white background

--- a/frontend/src/app/features/users/user-profile-details/user-profile-details-page.component.scss
+++ b/frontend/src/app/features/users/user-profile-details/user-profile-details-page.component.scss
@@ -40,6 +40,11 @@
 
 .hover-text {
   color: white;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
   padding: 16px 32px;
 }
 
